# va108xx-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-0BSD  README.md  bak.txt  jlink-gdb.sh  launch-unix.json  sections.txt  sizes.txt
.cargo/: config.toml  def-config.toml
.github/workflows/: ci.yml
automation/: Jenkinsfile
benchmark/: sections.txt  sections_lto.txt
board-tests/: Cargo.toml
board-tests/src/: main.rs
bootloader/: Cargo.toml  README.md
bootloader/src/: lib.rs  main.rs
defmt-testapp/: Cargo.toml  README.md
defmt-testapp/.cargo/: config.toml
defmt-testapp/src/: lib.rs  main.rs
docs/: expanded_stm32f0xx.rs  gpio_stm32f0xx.rs  gpioa0_stm32f0xx.rs  sections_rtt.txt
examples/: README.md
examples/embassy/: Cargo.toml
examples/embassy/src/: lib.rs  main.rs  time_driver.rs
examples/rtic/: Cargo.toml
examples/rtic/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/examples/: blinky-pac.rs  blinky.rs  cascade.rs  pwm.rs  rtt-log.rs  spi.rs  timer-ticks.rs  uart-irq-rtic.rs  uart.rs
examples/simple/src/: main.rs
flashloader/: Cargo.toml  README.md  image-loader.py
flashloader/slot-a-blinky/: Cargo.toml  memory.x
flashloader/slot-a-blinky/src/: main.rs
flashloader/slot-b-blinky/: Cargo.toml  memory.x
flashloader/slot-b-blinky/src/: main.rs
flashloader/src/: main.rs
scripts/: VA108xx_Series.yaml
sections/: sec-debug.txt  sec-release-lto.txt
src/: lib.rs
src/sysconfig/: peripheral_reset.rs
src/tim0/: csd_ctrl.rs
svd/: va108xx-base.svd.patched  va108xx-patch.yml
va108xx/: CHANGELOG.md  Cargo.toml  README.md  gen-helper.sh
va108xx-embassy/: CHANGELOG.md  Cargo.toml
va108xx-embassy/src/: lib.rs
va108xx-hal/: CHANGELOG.md  Cargo.toml  README.md
va108xx-hal/src/: clock.rs  gpio.rs  i2c.rs  lib.rs  pins.rs  pwm.rs  spi.rs  sysconfig.rs  time.rs  timer.rs  uart.rs  utility.rs
va108xx-hal/src/gpio/: asynch.rs  dynpin.rs  dynpins.rs  mod.rs  pin.rs  pins.rs  reg.rs
va108xx-hal/src/gpio_tmp/: mod.rs
va108xx-hal/src/spi/: mod.rs  pins.rs
va108xx-hal/src/uart/: asynch.rs  mod.rs  rx_asynch.rs  tx_asynch.rs
va108xx-hal/src/uart_tmp/: mod.rs  rx_asynch.rs  tx_asynch.rs
va108xx/src/: i2ca.rs  ioconfig.rs  irqsel.rs  lib.rs  porta.rs  spia.rs  sysconfig.rs  tim0.rs  utility.rs
va108xx/src/i2ca/: perid.rs  s0_address.rs  s0_addressb.rs  s0_addressmask.rs  s0_addressmaskb.rs  s0_data.rs  s0_lastaddress.rs  s0_maxwords.rs  s0_rxcount.rs  s0_rxfifoirqtrg.rs  s0_txcount.rs  s0_txfifoirqtrg.rs  status.rs
va108xx/src/ioconfig/: perid.rs
va108xx/src/irqsel/: int_ram_sbe.rs  nmi.rs  perid.rs
va108xx/src/porta/: perid.rs
va108xx/src/spia/: perid.rs
va108xx/src/sysconfig/: ef_config.rs  ef_id.rs  ioconfig_clkdiv.rs  ioconfig_clkdiv0.rs  irq_enb.rs  lockup_reset.rs  perid.rs  peripheral_clk_enable.rs  peripheral_reset.rs  procid.rs  ram_sbe.rs  refresh_config.rs  rom_prot.rs  rom_retries.rs  rom_trap_addr.rs  rom_trap_synd.rs  rst_stat.rs  tim_clk_enable.rs  tim_reset.rs
va108xx/src/tim0/: csd_ctrl.rs  perid.rs
va108xx/src/uarta/: fifo_clr.rs  perid.rs
va108xx/src/utility/: perid.rs  synd_check_32_52_data.rs  synd_check_32_52_synd.rs  synd_check_32_data.rs  synd_check_32_synd.rs  synd_check_64_data0.rs  synd_check_64_data1.rs  synd_check_64_synd.rs  synd_data0.rs  synd_data1.rs  synd_enc_32.rs  synd_enc_32_52.rs  synd_enc_64.rs  synd_synd.rs
vorago-reb1/: CHANGELOG.md  Cargo.toml  README.md
vorago-reb1/examples/: adt75-temp-sensor.rs  adxl343-accelerometer.rs  blinky-button-irq.rs  blinky-button-rtic.rs  blinky-leds.rs  max11619-adc.rs  nvm.rs
vorago-reb1/src/: button.rs  leds.rs  lib.rs  m95m01.rs  max11619.rs  temp_sensor.rs
vorago-shared-peripherals/: Cargo.toml
vorago-shared-peripherals/src/: lib.rs
vorago-shared-periphs/: Cargo.toml
vorago-shared-periphs/src/: lib.rs  pins.rs  sysconfig.rs
vorago-shared-periphs/src/gpio/: asynch.rs  ll.rs  mod.rs  regs.rs
vorago-shared-periphs/src/ioconfig/: regs.rs
vorago-shared-periphs/src/uart/: mod.rs  regs.rs  rx_asynch.rs  tx_asynch.rs
vscode/: launch.json  tasks.json
