[workspace]

members = [
	"vorago-reb1-rs",
	"va108xx",
	"va108xx-hal",
	"max116xx-10bit",
]

[profile.dev]
lto = false
debug = true

[profile.release]
# Can be problematic for debugging and is definitely problematic with RTT
lto = false
debug = true
opt-level = 's'

[profile.release-lto]
inherits = "release"
lto = true
