[workspace]
resolver = "2"
members = [
	"vorago-reb1",
	"va108xx",
	"va108xx-hal",
  "examples/simple",
  "board-tests",
]

exclude = [
  "defmt-testapp",
]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
