[package]
name = "board-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
rtt-target = "0.5"
panic-rtt-target = "0.1.3"
embedded-hal = "1"
embedded-hal-nb = "1"
embedded-io = "0.6"

[dependencies.va108xx-hal]
path = "../va108xx-hal"
features = ["rt"]

