[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1"
embedded-hal-bus = "0.2"
dummy-pin = "1"
panic-rtt-target = { version = "0.1.3" }
panic-halt = { version = "0.2" }
rtt-target = { version = "0.5" }
crc = "3"

[dependencies.va108xx-hal]
path = "../va108xx-hal"

[dependencies.vorago-reb1]
path = "../vorago-reb1"

[features]
default = []
rtt-panic = []
