[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1"
panic-rtt-target = "0.2"
panic-halt = "1"
rtt-target = "0.6"
crc = "3"
num_enum = { version = "0.7", default-features = false }
static_assertions = "1"

[dependencies.va108xx-hal]
version = "0.10"

[dependencies.vorago-reb1]
version = "0.8"

[features]
default = []
rtt-panic = []
