[package]
name = "vorago-reb1"
version = "0.5.0"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
edition = "2021"
description = "Board Support Crate for the Vorago REB1 development board"
homepage = "https://egit.irs.uni-stuttgart.de/rust/va108xx-rs"
repository = "https://egit.irs.uni-stuttgart.de/rust/va108xx-rs"
license = "Apache-2.0"
keywords = ["no-std", "reb1", "cortex-m", "vorago", "va108xx"]
categories = ["aerospace", "embedded", "no-std", "hardware-support"]

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1"

[dependencies.max116xx-10bit]
version = "0.3"

[dependencies.va108xx-hal]
version = "0.6"
features = ["rt"]

[features]
rt = ["va108xx-hal/rt"]

[dev-dependencies]
cortex-m-rtic = "1.1"
panic-halt = "0.2"
nb = "1"

[dev-dependencies.rtt-target]
version = "0.5"

[dev-dependencies.panic-rtt-target]
version = "0.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
