[package]
name = "vorago-shared-periphs"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1"
derive-mmio = { path = "../../../ROMEO/derive-mmio" }
bitbybit = "1.3"
arbitrary-int = "1.3"
static_assertions = "1.1"
embedded-hal = { version = "1.0" }
thiserror = { version = "2", default-features = false }
paste = "1"
defmt = { version = "1", optional = true }

[features]
vor1x = ["_family-selected"]
vor4x = ["_family-selected"]

_family-selected = []
