[package]
name = "rtic-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1"
embedded-io = "0.6"
rtt-target = { version = "0.5" }
# Even though we do not use this directly, we need to activate this feature explicitely
# so that RTIC compiles because thumv6 does not have CAS operations natively.
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"]}
panic-rtt-target = { version = "0.1" }

[dependencies.va108xx-hal]
path = "../../va108xx-hal"

[dependencies.vorago-reb1]
path = "../../vorago-reb1"

[dependencies.rtic]
version = "2"
features = ["thumbv6-backend"]

[dependencies.rtic-monotonics]
version = "2"
features = ["cortex-m-systick"]

[dependencies.rtic-sync]
version = "1.3"
features = ["defmt-03"]
