[package]
name = "simple-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
panic-halt = "1"
panic-rtt-target = "0.2"
critical-section = "1"
rtt-target = "0.6"
embedded-hal = "1"
embedded-hal-nb = "1"
embedded-io = "0.6"
cortex-m-semihosting = "0.5.0"

[dependencies.va108xx-hal]
version = "0.11"
path = "../../va108xx-hal"
features = ["rt", "defmt"]

[dependencies.vorago-reb1]
version = "0.8"
path = "../../vorago-reb1"
